<resources>
    <string name="app_name">Online Shop</string>
    <string name="search_anything">Search anything</string>
    <string name="wish_list">Wish List</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="title">title</string>
    <string name="dollar">$-</string>
    <string name="official_brands">Official Brands</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="sold_text">Put any explanation you want here.</string>
    <string name="empty_cart">Your Cart is Empty</string>
    <string name="my_cart">My Cart</string>
    <string name="enter_coupon">ٍEnter Your Coupon</string>
    <string name="apply">Apply</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="total">Total</string>
    <string name="check_out">Check Out</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>