<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/grey_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pic"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feeEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:textColor="@color/green"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:textColor="@color/green"
        android:textSize="@dimen/font_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/feeEachItem" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/grey_bg2"
        android:layout_marginEnd="@dimen/margin_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/plusCartBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginVertical="@dimen/margin_2xSmall"
            android:layout_marginEnd="@dimen/margin_2xSmall"
            android:background="@drawable/green_button_bg"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberItemTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/minusCartBtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginVertical="@dimen/margin_2xSmall"
            android:layout_marginStart="2dp"
            android:background="@drawable/white_oval_bg"
            android:gravity="center"
            android:text="@string/minus"
            android:textColor="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>